# gateflow

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.gateflow/: config.json  milestones.json  tasks.json
.gateflow/closeout/: closure_issues.json  gateflow-backend-001_closeout.md  gateflow-local-external-003_closeout.md  gateflow-standardization-002_closeout.md  gateflow-v1-004_closeout.md
.github/workflows/: backend-mode-smoke.yml  planning-standardization-gates.yml  release-reproducibility.yml
docs/: backend-migration-rollout.md  backend-operator-guide.md  install.md  release.md  v1-compatibility-contract.md  v1-migration-rollback-matrix.md  v1-risk-register.md
docs/adr/: 0001-local-backend-mode.md
docs/evidence/: gateflow-v1-004-branch-protection.md
docs/rfc/: gateflow-backend-001-rfc.md
docs/task-packets/: gateflow-local-external-003-packet.md  gateflow-standardization-002-packet.md  gateflow-v1-004-packet.md
src/gateflow/: api_shim.py  backend.py  cli.py  close.py  config.py  connect.py  connection.py  import_luvatrix.py  policy.py  scaffold.py  storage.py  sync.py  validate.py  workspace.py
tests/: conftest.py  test_gateflow_cli_backend_sync.py  test_gateflow_cli_close.py  test_gateflow_cli_connect_local_external.py  test_gateflow_cli_init.py  test_gateflow_cli_migration_matrix_v1.py  test_gateflow_cli_policy_guard.py  test_gateflow_cli_validate.py
