[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gateflow"
version = "1.0.0"
description = "Standalone GateFlow planning CLI"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = []
keywords = ["planning", "workflow", "cli", "gateflow"]

[project.urls]
Homepage = "https://github.com/0202alcc/gateflow"
Documentation = "https://github.com/0202alcc/gateflow"

[project.scripts]
gateflow = "gateflow.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gateflow*"]
